<resources>
    <string name="app_name">Furniture4You</string>

    <!--    Nav routes    -->
    <string name="nav_add_shipping_address">Add shipping address</string>
    <string name="nav_checkout">Check out</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_my_cart">My cart</string>
    <string name="nav_my_order">My order</string>
    <string name="nav_my_reviews">My reviews</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_payment_method">Payment method</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_rating_review">Rating &amp; Review</string>
    <string name="nav_search">My order</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_shipping_address">Shipping address</string>
    <string name="nav_home">Home</string>

    <!--    Content description labels  -->
    <string name="content_desc_action_start_icon">Action start icon</string>
    <string name="content_desc_action_end_icon">Action end icon</string>
    <string name="content_desc_archive">Archive Icon</string>
    <string name="content_desc_back_btn">Back Button Icon</string>
    <string name="content_desc_cart">Cart Icon</string>
    <string name="content_desc_clear_search">Clear search</string>
    <string name="content_desc_delivery_icon">Favorite icon</string>
    <string name="content_desc_edit">Edit Icon</string>
    <string name="content_desc_enter_promo">Enter Promo Button Icon</string>
    <string name="content_desc_favorite_icon">Favorite icon</string>
    <string name="content_desc_launcher_icon">Launcher icon</string>
    <string name="content_desc_prelogin_background">Prelogin background</string>
    <string name="content_desc_product_image">Product image</string>
    <string name="content_desc_product">Product image</string>
    <string name="content_desc_rating">Rating Icon</string>
    <string name="content_desc_search">Search Icon</string>
    <string name="content_desc_visibility_icon">Visibility Icon</string>
    <string name="content_desc_vendor">Vendor image</string>

    <!--    Field labels   -->
    <string name="field_name">Name</string>
    <string name="field_password">Password</string>
    <string name="field_confirm_password">Confirm Password</string>
    <string name="field_email">Email</string>

    <string name="field_card_number">Card Number</string>
    <string name="field_card_holder">Card Holder</string>
    <string name="field_card_cvv">CVV</string>
    <string name="field_card_exp_date">Expiration Date</string>

    <string name="field_city">City</string>
    <string name="field_country">Country</string>
    <string name="field_shipping_address">Shipping Address</string>
    <string name="field_shipping_fullname">Full name</string>
    <string name="field_shipping_zipcode">Zipcode (Postal code)</string>

    <!--    Placeholder labels   -->
    <string name="placeholder_name">Ex. Mark Johnson</string>
    <string name="placeholder_password">Enter your password</string>
    <string name="placeholder_confirm_password">Repeat your password</string>
    <string name="placeholder_enter_promo_code">Enter your promo code</string>

    <string name="placeholder_country">Select country</string>
    <string name="placeholder_city">Select city</string>
    <string name="placeholder_shipping_address">Ex. 25 rue Robert Latouche, Nice, 06200, France</string>
    <string name="placeholder_address">Ex. 25 Robert Latouche street</string>
    <string name="placeholder_zipcode">Ex. 23512</string>

    <string name="placeholder_card_holder">Ex. Mark Johnson</string>
    <string name="placeholder_card_number">Ex. 1234 5678 1234 5678</string>
    <string name="placeholder_card_cvv">Ex. 754</string>
    <string name="placeholder_card_exp_date">Ex. MM/YY</string>

    <!--    Error field labels   -->
    <string name="error_biometrics_activation_failed">Biometrics not enabled, please check profile settings to try again.</string>
    <string name="error_biometrics_not_available">Biometrics not available</string>
    <string name="error_invalid_card_number">Invalid card number</string>
    <string name="error_invalid_credentials">Invalid credentials!</string>
    <string name="error_invalid_field">Invalid field</string>
    <string name="error_invalid_email">Invalid email (ex. luka@mail.com)</string>
    <string name="error_invalid_password">Invalid password length [6–12]</string>
    <string name="error_invalid_zipcode">Invalid format (5 digit code)</string>
    <string name="error_promo_code_already_activated">Promo code already activated!</string>
    <string name="error_password_not_match">Password and confirm password do not match!</string>
    <string name="error_check_fields">Please check your fields!</string>

    <!--    Button labels   -->
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="btn_add_all_to_my_cart">Add all to my cart</string>
    <string name="btn_add_new_card">Add new card</string>
    <string name="btn_back_to_home">Back to home</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_continue_shopping">Continue shopping</string>
    <string name="btn_checkout">Check out</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_login">Log in</string>
    <string name="btn_no">No</string>
    <string name="btn_open_cart">Open cart</string>
    <string name="btn_open_settings">Go to Settings</string>
    <string name="btn_remember_your_password">Remember your password?</string>
    <string name="btn_save_address">Save address</string>
    <string name="btn_send_email">Send email</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_submit_order">Submit order</string>
    <string name="btn_track_orders">Track your orders</string>
    <string name="btn_write_review">Write a review</string>
    <string name="btn_yes">Yes</string>

    <!--    Mock labels   -->
    <string name="mock_my_orders">Already have 10 orders</string>
    <string name="mock_payment_method">You have 2 cards</string>
    <string name="mock_my_reviews">Reviews for 5 items</string>
    <string name="mock_shipping_addresses">03 Addresses</string>
    <string name="mock_subtitle_header">Welcome back</string>
    <string name="mock_title_header">Hello!</string>

    <!--    Title labels   -->
    <string name="title_add_to_cart">Items added to cart</string>
    <string name="title_beautiful">Beautiful</string>
    <string name="title_checkout_delivery">Delivery:</string>
    <string name="title_checkout_order">Order:</string>
    <string name="title_checkout_total">Total:</string>
    <string name="title_delivery_method">Delivery method</string>
    <string name="title_empty_cart">No items in cart</string>
    <string name="title_login">Hello!</string>
    <string name="title_logout">Confirm logout</string>
    <string name="title_make_home">Make home</string>
    <string name="title_notification_archived">Notification archived!</string>
    <string name="title_notification_deleted">Notification deleted!</string>
    <string name="title_no_favorites">No favorite items</string>
    <string name="title_no_result">No matches for “%1s”</string>
    <string name="title_order_price">$%1s</string>
    <string name="title_order_success">Success!</string>
    <string name="title_payment">Payment</string>
    <string name="title_payment_method">Payment method</string>
    <string name="title_personal_information">Personal Information</string>
    <string name="title_prelogin">Make your</string>
    <string name="title_product_discount">-$ %1s</string>
    <string name="title_product_price">$ %1s</string>
    <string name="title_register">Welcome</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_review_count">(%1s)</string>
    <string name="title_shipping_information">Shipping information</string>

    <!--    Subtitle labels   -->
    <string name="subtitle_add_to_cart">Do you want to continue with the shopping or go to checkout?</string>
    <string name="subtitle_login">Welcome back</string>
    <string name="subtitle_order_success">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="subtitle_prelogin">Home beautiful</string>

    <!--    Other labels   -->
    <string name="label_add_items_to_cart">Please explore our products</string>
    <string name="label_add_payment_method">Add payment</string>
    <string name="label_add_shipping_address">Add address</string>
    <string name="label_biometrics_enable_explanation">You should enable Biometrics in System Settings</string>
    <string name="label_biometrics_enabled">Successfully enabled biometrics</string>
    <string name="label_biometrics_disabled">Successfully disabled biometrics</string>
    <string name="label_biometrics_disabled_fail">Error while disabling biometrics</string>
    <string name="label_biometrics_explanation">Logging in with biometrics is an easier way to access your account</string>
    <string name="label_card_holder_name">Card Holder Name</string>
    <string name="label_card_information">Card information</string>
    <string name="label_cart_discount">Discount(%1$s%%):</string>
    <string name="label_cart_price">Price:</string>
    <string name="label_check_products">Check our products on home screen</string>
    <string name="label_choose_delivery_method">Choose delivery method</string>
    <string name="label_contact_us">Contact us</string>
    <string name="label_counter">%02d</string>
    <string name="label_default_payment_method">Use as default payment method</string>
    <string name="label_delivery">Delivery information</string>
    <string name="label_delivery_status_changes">Delivery status changes</string>
    <string name="label_detail">Detail</string>
    <string name="label_enable_biometrics">Enable Biometrics</string>
    <string name="label_email">Email</string>
    <string name="label_expiry_date">Expiry Date</string>
    <string name="label_faq">FAQ</string>
    <string name="label_help_center">Help Center</string>
    <string name="label_logout">Are you sure you want to logout?</string>
    <string name="label_logged_in">Successfully logged in!</string>
    <string name="label_my_orders">My orders</string>
    <string name="label_name">Name</string>
    <string name="label_new_arrivals">New arrivals</string>
    <string name="label_new_feature">This feature will be available soon!</string>
    <string name="label_notification">Notifications</string>
    <string name="label_order_number">Order No%1$s</string>
    <string name="label_password">Password</string>
    <string name="label_prelogin_description">The best simple place where you discover most wonderful furnitures and make your home beautiful</string>
    <string name="label_promo_code_activated">Promo code activated!</string>
    <string name="label_promo_code_removed">Promo code removed!</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_register_have_account">Already have account?</string>
    <string name="label_return">Return information</string>
    <string name="label_sales">Sales</string>
    <string name="label_search">Search Furniture</string>
    <string name="label_search_count">%1d items</string>
    <string name="label_settings">Notification, Password, FAQ, Contact us</string>
    <string name="label_setup_biometrics">Setup Biometrics</string>
    <string name="label_shipping_addresses">Shipping Addresses</string>
    <string name="label_skip_this_step">Skip this step</string>
    <string name="label_successfully_added_to_cart">Successfully added to cart!</string>
    <string name="label_successfully_registered">Successfully created a user!</string>
    <string name="label_total_amount">Total Amount:</string>
    <string name="label_try_different_search">Try different search keywords</string>
    <string name="label_use_biometrics">Use biometrics for login</string>

    <plurals name="label_review_count">
        <item quantity="one">%1d review</item>
        <item quantity="other">%1d reviews</item>
    </plurals>
</resources>