...
            color = FieldTextColor
        )
        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 8.dp)
                .testTag("passwordField"),
            value = value,
            onValueChange = {
                val hasChanged = onValueChange(it)
                if (hasChanged) {
                    isError = !isFieldValid(it)
                }
...
