...
                            colorFilter = ColorFilter.tint(colorResource(id = R.color.color_medium_gray)),
                        )
                    }
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("emailField"),
                value = value,
                onValueChange = {
                    onValueChange(it)
                    isError = !ValidationUtils.isEmailValid(it)
                },
                placeholder = {
...
