...
    modifier: Modifier = Modifier
) {
    Row(
        modifier = modifier
            .fillMaxWidth()
            .padding(top = 4.dp, start = 16.dp, end = 16.dp)
            .testTag("homeHeader")
    ) {
        IconButton(onClick = onSearchClick) {
            Icon(
                painter = painterResource(id = R.drawable.ic_search),
                tint = colorResource(id = R.color.color_dark_gray),
                contentDescription = stringResource(R.string.content_desc_action_start_icon)
...
