...
                },
                onEndActionClick = {
                    openLogoutDialog = true
                },
                modifier = Modifier
                    .background(colorResource(id = R.color.color_white))
                    .testTag("profileTitle")
            )
        },
        bottomBar = {
            BottomBarNavigation(
                currentRoute = Screens.HomeSections.Profile.route,
                onNavigateToBottomBarRoute = onNavigateToBottomBarRoute
...
